Nomination alterations at smaller sizes to avoid placeholder being cut off

--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -214,8 +214,10 @@ header
     margin-bottom: 0
 
 .nominate-form
-  padding-right: 5em
+  padding-right: 0
   position: relative
+  +respond-to(400px)
+    padding-right: 5em
 
 .nominate-input
   padding-right: 103px
@@ -230,7 +232,7 @@ header
   bottom: 110%
   left: 0
   position: absolute
-  right: 5em
+  right: 0
   z-index: 100
   li
     border-bottom: 3px solid darken($color-border, 8%)
@@ -273,13 +275,15 @@ header
     color: lighten($color-base, 25%)
     font: normal 1.5em/2 $font-base
     padding: 2px 10px 0
+  +respond-to(400px)
+    right: 5em
 
 .nominate-submit
   height: 51px
   opacity: 0
   padding: 13px 0 9px
   position: absolute
-  right: 53px
+  right: 3px
   top: 3px
   visibility: hidden
   width: 90px
@@ -287,12 +291,14 @@ header
   .is-nominating &
     opacity: 1
     visibility: visible
+  +respond-to(400px)
+    right: 53px
 
 .nominate-hero
   background: image-url('bg-hero.png') no-repeat
   border: 0
   bottom: -1px
-  display: block
+  display: none
   height: 72px
   position: absolute
   right: 0
@@ -303,6 +309,8 @@ header
   width: 131px
   .is-nominating &
     background-position: -141px 0
+  +respond-to(400px)
+    display: block
   @media (-webkit-min-device-pixel-ratio: 1.5), (min-resolution: 144dpi)
     background: image-url('bg-hero@2x.png') no-repeat
     -webkit-background-size: 272px 71px
